spectec/test/elab/neg/type-latex-outside-hint.spectec
;; A %latex literal appears in regular expression position rather
;; than inside a hint expression.

dec $f : nat
def $f = %latex("hello")
